--- a/src/component/FullScreenSection/FullScreenSection.css
+++ b/src/component/FullScreenSection/FullScreenSection.css
@@ -1,17 +1,16 @@
 .full-screen-section {
     width: 100%;
-    border: 1px solid #ff6700;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 20px;
-    /* border-bottom: 1px solid #eee; */
     opacity: 0;
     transform: translateY(20px);
     transition: opacity 0.4s ease-out, transform 0.4s ease-out;
     will-change: opacity, transform;
+    box-sizing: border-box;
   }
   
   .full-screen-section.visible {
